# Structural-diversity-index

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Example.ipynb  LICENSE  MeetingTimeEstimator.py  README.md  RandomWalkSimulator.py  RandomWalkSimulatorCUDA.py  environment.yml  environmentCUDA.yml  environment_linux.yml  environment_mac.yml
Docs/: RandomWalkSimulator.rst  RandomWalkSimulatorCUDA.rst  conf.py  environment.yml  index.rst  modules.rst  read_the_docs.yaml  structural_diversity_index.rst
Docs/_build/doctrees/: MeetingTimeEstimator.doctree  RandomWalkSimulator.doctree  RandomWalkSimulatorCUDA.doctree  environment.pickle  index.doctree  modules.doctree
Docs/_build/html/: .buildinfo  MeetingTimeEstimator.html  RandomWalkSimulator.html  RandomWalkSimulatorCUDA.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
Docs/_build/html/_sources/: MeetingTimeEstimator.rst.txt  index.rst.txt  modules.rst.txt
PythonPackage/: LICENSE  README.md  pyproject.toml
PythonPackage/src/structural_diversity_index/: MeetingTimeEstimator.py  MeetingTimeUI.py  RandomWalkSimulator.py  RandomWalkSimulatorCUDA.py  __init__.py
