[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "structural_diversity_index"
version = "0.0.7"
authors = [
  { name="Andrea Musso", email="andreamusso96@gmail.com" },
]
description = "A package for fast numerical computation of the structural diversity index of arbitrary networks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["scipy >= 1.7.3",
    "numpy >= 1.22.1",
    "torch >= 1.10",
    "tqdm >= 4.62.3",
    "networkx >= 2.8"
]

[project.optional-dependencies]
cuda = ["cupy-cuda11x >= 9.4.0"]

[project.urls]
Homepage = "https://github.com/ethz-coss/RSE-Distance"
Documentation = "https://rse-distance.readthedocs.io/en/latest/"